# testf030

./: .cproject  .gitignore  .mxproject  test030.ioc
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c
Debug/: makefile  objects.list  objects.mk  test030.elf  test030.list  test030.map
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f0xx_hal_msp.d  stm32f0xx_hal_timebase_tim.cyclo  stm32f0xx_hal_timebase_tim.d  stm32f0xx_hal_timebase_tim.su  stm32f0xx_it.cyclo  stm32f0xx_it.d  stm32f0xx_it.su  subdir.mk
Debug/Drivers/STM32F0xx_HAL_Driver/Src/: subdir.mk
librs/: Cargo.toml
librs/.cargo/: config.toml
librs/src/: lib.rs  minos.rs  minos_f0x0.rs
